--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "cesium": "^1.58.1",
+    "cesium-navigation-es6": "^1.0.8",
     "element-ui": "^2.9.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
